--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : ""
-  avatar           : "images/bio-photo.jpg"
+  avatar           : "bio-photo.jpg"
   bio              : ""
   location         : "Location"
   employer         :
